# HubbleConstant

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
data/: galaxies.json
scripts/: build.sh  compile.sh  generate_logs.sh  run.sh  runserver.sh  version.sh
src/: main.rs
src/libs/: constants.rs  mod.rs
src/libs/structures/: implementations.rs  mod.rs  models.rs
src/libs/utils/: console_handler.rs  files_handler.rs  hubble_handler.rs  misc_handler.rs  mod.rs
src/tests/: mod.rs
src/tests/test_structures/: test_models.rs
src/tests/test_utils/: mod.rs  test_file_handlers.rs  test_hubble_handlers.rs
