[package]
name = "hubble-constant"
version = "0.1.0"
edition = "2021"
authors = [
    "Prithoo Medhi <prithoo.medhi@mslate.ai>",
    "Arkiralor <prithoo11335@gmail.com>"
]
description = "A console program to calculate the Hubble constant"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Arkiralor/HubbleConstant"
readme = "README.md"
homepage = ""
documentation = ""
keywords = ["hubble", "constant", "cosmology", "astronomy", "physics"]
categories = ["science", "astronomy", "physics", "cli", "console"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
prime-checker = "0.2.19"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
